updated javascript for fixing floated images and p align

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -311,6 +311,7 @@ header
   width: $post_width
   background-color: white
   clear: both
+  padding-bottom: $padding
 
 .post_title
   margin: $padding 0
